update recommended configs

--- a/configs/recommended_vscode_configurations/extensions.json
+++ b/configs/recommended_vscode_configurations/extensions.json
@@ -2,5 +2,6 @@
     "recommendations": [
       "ms-python.python",
       "ms-python.black-formatter",
+      "tamasfe.even-better-toml"
     ]
   }
