--- a/configs/recommended_vscode_configurations/settings.json
+++ b/configs/recommended_vscode_configurations/settings.json
@@ -3,5 +3,7 @@
         "tests"
     ],
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.testing.pytestEnabled": true,
+    "python.pythonPath": "${workspaceFolder}/.venv/bin/python",
+    "python.terminal.activateEnvironment": true        
 }
