--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
 requires-python = ">=3.9"
 
 [project.optional-dependencies]
-dev = ["black", "isort", "pytest"]
+dev = ["black", "isort", "pytest", "flake8", "mypy"]
 publish = ["build", "twine"]
 
 [project.urls]
@@ -40,3 +40,6 @@ max-line-length = 160
 
 [tool.autopep8]
 max_line_length = 160
+
+[tool.black]
+line-length = 160
