--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.11"]
+        include:
+          - python-version: "3.9"
+            if: github.ref == 'refs/heads/main'
+          - python-version: "3.10"
+            if: github.ref == 'refs/heads/main'
+          - python-version: "3.11"
+            if: github.ref == 'refs/heads/main'
+          - python-version: "3.12"
+            if: github.ref == 'refs/heads/main'
+          - python-version: "3.13"
+            if: github.ref == 'refs/heads/main'
 
     steps:
     - uses: actions/checkout@v4
