add github actions extension

--- a/configs/recommended_vscode_configurations/extensions.json
+++ b/configs/recommended_vscode_configurations/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
+      "github.vscode-github-actions",
       "ms-python.python",
       "ms-python.black-formatter",
       "tamasfe.even-better-toml"
