--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,18 +16,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.11"]
         include:
           - python-version: "3.9"
-            if: github.ref == 'refs/heads/main'
+            if: github.ref != 'refs/heads/main'
           - python-version: "3.10"
-            if: github.ref == 'refs/heads/main'
+            if: github.ref != 'refs/heads/main'
           - python-version: "3.11"
-            if: github.ref == 'refs/heads/main'
           - python-version: "3.12"
-            if: github.ref == 'refs/heads/main'
-          - python-version: "3.13"
-            if: github.ref == 'refs/heads/main'
+            if: github.ref != 'refs/heads/main'
 
     steps:
     - uses: actions/checkout@v4
@@ -46,6 +42,9 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Type check with mypy
+      run: |
+        mypy .        
     - name: Test with pytest
       run: |
         pytest
