--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,12 +18,12 @@ jobs:
       matrix:
         include:
           - python-version: "3.9"
-            if: github.ref != 'refs/heads/main'
+            if: github.ref == 'refs/heads/main'
           - python-version: "3.10"
-            if: github.ref != 'refs/heads/main'
+            if: github.ref == 'refs/heads/main'
           - python-version: "3.11"
           - python-version: "3.12"
-            if: github.ref != 'refs/heads/main'
+            if: github.ref == 'refs/heads/main'
 
     steps:
     - uses: actions/checkout@v4
