--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,12 +16,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        python-version: ["3.11"]
         include:
           - python-version: "3.9"
             if: github.ref == 'refs/heads/main'
           - python-version: "3.10"
             if: github.ref == 'refs/heads/main'
-          - python-version: "3.11"
           - python-version: "3.12"
             if: github.ref == 'refs/heads/main'
 
