--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,11 +19,11 @@ jobs:
         python-version: ["3.11"]
         include:
           - python-version: "3.9"
-            if: github.ref == 'refs/heads/main'
+            include-if: github.ref == 'refs/heads/main'
           - python-version: "3.10"
-            if: github.ref == 'refs/heads/main'
+            include-if: github.ref == 'refs/heads/main'
           - python-version: "3.12"
-            if: github.ref == 'refs/heads/main'
+            include-if: github.ref == 'refs/heads/main'
 
     steps:
     - uses: actions/checkout@v4
