--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,14 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.11"]
-        include:
-          - python-version: "3.9"
-            include-if: github.ref == 'refs/heads/main'
-          - python-version: "3.10"
-            include-if: github.ref == 'refs/heads/main'
-          - python-version: "3.12"
-            include-if: github.ref == 'refs/heads/main'
+        python-version: [3.9, 3.10, 3.11, 3.12]
 
     steps:
     - uses: actions/checkout@v4
